<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".auth.RegistroActivity"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:src="@mipmap/ic_launcher_foreground"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_datoslogin_register"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        android:layout_marginTop="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/txt_hintnombre_register"
                android:background="@drawable/style_edit_txt"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/editTextCorreo"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/txt_hintcorreo_register"
                android:inputType="textEmailAddress"
                android:background="@drawable/style_edit_txt"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/txt_hintpassword_register"
                android:inputType="textPassword"
                android:background="@drawable/style_edit_txt"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/txtNumeroRegistro"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:inputType="phone"
                android:background="@drawable/style_edit_txt"
                android:hint="@string/txt_hintnumber_register"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btn_registro"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:text="@string/txt_bttncontinuar_register"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/bttoncolor"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="3dp"/>

            <TextView
                android:id="@+id/textViewRegresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_backlogin_register"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:paddingBottom="20dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>