<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".auth.LoginActivity"
    android:fitsSystemWindows="true">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/tv_bienvenidaThirdScreen"
            android:layout_width="209dp"
            android:layout_height="215dp"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/txt_nombreAppThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/txt_nombreAppthirdScreen"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_descripcionthirdScreen"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="italic"
        android:textColor="@color/black"/>

    <!-- User Field -->
    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="67dp"
        android:layout_marginTop="17dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_person"
            android:layout_width="92dp"
            android:layout_height="117dp"
            app:srcCompat="@mipmap/person" />

        <EditText
            android:id="@+id/txt_incorreo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/style_edit_txt"
            android:ems="10"
            android:hint="@string/in_correo"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="#686464" />
    </LinearLayout>

    <!-- Password Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_key"
            android:layout_width="118dp"
            android:layout_height="130dp"
            app:srcCompat="@mipmap/key" />

        <EditText
            android:id="@+id/txt_inpassword"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/style_edit_txt"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/in_contrasena"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="#686464"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_ingresar"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/bttoncolor"
        android:text="@string/txt_buttoningresar"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/txt_recuperarcontra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/txt_recoverpassword"
        android:layout_margin="7dp"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/in_huella"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/tv_inHuella"
        android:layout_margin="7dp"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Google Button -->
    <FrameLayout
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/button_google"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:backgroundTint="@color/white"
            android:text="@string/txt_google"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/img_buttongoogle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="10dp"
            app:srcCompat="@mipmap/google2" />
    </FrameLayout>

    <!-- Footer Links -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_nohaycuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donthaveaccount"
            android:textSize="19sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/txt_register"
            android:textColor="@color/bttoncolor"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>